# linxira-gaming-manager

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/: org.linxira.GamingManager.desktop  org.linxira.GamingManager.metainfo.xml
src/linxira_gaming_manager/: app.py  backup.py  discovery.py  launch.py  paths.py  setup.py  store.py
tests/: test_discovery.py  test_metadata.py  test_safety.py  test_setup.py  test_store.py
