[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "linxira-gaming-manager"
version = "0.1.0"
description = "User-level game library and compatibility manager for Linxira OS"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["PySide6", "vdf"]

[project.scripts]
linxira-gaming-manager = "linxira_gaming_manager.app:main"

[tool.setuptools.packages.find]
where = ["src"]
